# contour_tracking_with_heterogeneous_sonar_configurations

./: .gitignore  LICENSE  README.md
contour_tracker/config/: contour_fitting.jsonc  data_recorder.jsonc  depth_cruise_controller.jsonc  los_guidance.json  msis_adaptive_scanner.jsonc
contour_tracker/scripts/: contour_fitting.py  data_recorder.py  depth_cruise_controller.py  los_guidance.py  msis_adaptive_scanner.py  pid_base.py  start_all.sh
nng_comm/: CMakeLists.txt  README.md
nng_comm/include/nng_comm/: message.hpp  nng_comm.hpp  publisher.hpp  replier.hpp  requester.hpp  subscriber.hpp
nng_comm/scripts/: __init__.py  message.py  publisher.py  replier.py  requester.py  subscriber.py
nng_comm/src/: message.cpp  publisher.cpp  replier.cpp  requester.cpp  subscriber.cpp
nng_comm/tests/: test_cross_host.py  test_cross_lang.cpp  test_cross_lang.py  test_cross_lang.sh  test_nng_comm.cpp  test_nng_comm.py
ogm/: README.md  config.json  main.py
ogm/core/: __init__.py  colormap.py  comm.py  config.py  contour.py  contour_filter.py  grid.py  quadtree.py  sensors.py  transforms.py  visualizer.py
simulator/: CMakeLists.txt  run_simulation.sh
simulator/config/: config.jsonc  test_control.jsonc  test_subscribe.jsonc  test_teleop.jsonc
simulator/data/environment/: generate_complex_terrain.py
simulator/data/sam_auv/: sam_auv.xml  visualize_model.py
simulator/data/scenarios/: single_auv.scn
simulator/include/: graphical_app.hpp  simulation_manager.hpp
simulator/include/sim_bridge/: actuator_bridge.hpp  message_converter.hpp  sensor_bridge.hpp
simulator/include/utils/: config_loader.hpp  json_utils.hpp  render_settings_mapper.hpp
simulator/scripts/: test_control.py  test_subscribe.py  test_teleop.py
simulator/src/: graphical_app.cpp  main.cpp  simulation_manager.cpp
simulator/src/sim_bridge/: actuator_bridge.cpp  message_converter.cpp  sensor_bridge.cpp
simulator/src/utils/: config_loader.cpp  json_utils.cpp  render_settings_mapper.cpp
simulator/tests/: test_message_converter.cpp
stonefish/Tests/Data/: girona500auv_full.scn
stonefish/Tests/UnderwaterTest/: UnderwaterTestApp.cpp  UnderwaterTestManager.cpp  UnderwaterTestManager.h
stonefish/docs/: changelog.rst  sensors.rst  stonefish_analysis_report.py
